--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "crypto-js": "^4.1.1",
     "immutable": "^3.8.2",
     "merchant.js": "0.3.1",
-    "next": "^10.0.4",
-    "next-optimized-images": "^2.6.2",
-    "react": "^17.0.1",
+    "next": "^13.5.4",
+    "next-images": "^1.8.5",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.6.4",
     "react-circular-progressbar": "^2.0.4",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "react-tooltip": "^4.2.21",
     "uuid": "^8.3.2"
   },
